--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ destination: ./_site
 plugins:     ./_plugins
 layouts:     ./_layouts
 include:     ['.htaccess']
-exclude:     []
+exclude:     ['.gitignore','Gemfile','Gemfile.lock','README.md','TODO']
 keep_files:  ['.git','.svn']
 gems:        []
 
@@ -25,9 +25,9 @@ excerpt_separator: "\n\n"
 safe:        false
 host:        0.0.0.0
 port:        4000
-baseurl:     /
+baseurl:     http://arcan1s.github.io
 url:         http://localhost:4000
-lsi:         false
+lsi:         true
 
 maruku:
   use_tex:    false
