--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 exclude:       ['.gitignore','Gemfile','Gemfile.lock','README.md','TODO']
 permalink:     pretty
-paginate:      1
+paginate:      10
 paginate_path: '/blog/:num'
 markdown:      rdiscount
-baseurl:       /
-lsi:           false
+baseurl:       http://arcan1s.github.io
+lsi:           true
