--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ relative_permalinks: true
 
 permalink:     pretty
 paginate:      10
-paginate_path: '/blog/:num'
+paginate_path: 'blog/:num'
 
 markdown:      rdiscount
 markdown_ext:  markdown,mkd,mkdn,md
