--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ layouts:     ./_layouts
 include:     ['.htaccess']
 exclude:     ['.gitignore','Gemfile','Gemfile.lock','README.md','TODO']
 keep_files:  ['.git','.svn']
-gems:        [jekyll-pagination]
+gems:        []
 
 future:      true
 limit_posts: 0
@@ -14,10 +14,7 @@ pygments:    true
 relative_permalinks: true
 
 permalink:     pretty
-paginate:      10
-paginate_path:
-- 'blog/:num'
-- 'ru/blog/:num'
+paginate_path: 'blog/:num'
 
 markdown:      rdiscount
 markdown_ext:  markdown,mkd,mkdn,md
@@ -30,7 +27,7 @@ host:        0.0.0.0
 port:        4000
 baseurl:     /
 url:         http://localhost:4000
-lsi:         true
+lsi:         false
 
 maruku:
   use_tex:    false
