small edit of adds

--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ host:        0.0.0.0
 port:        4000
 baseurl:     /
 url:         http://localhost:4000
-lsi:         false
+lsi:         true
 
 maruku:
   use_tex:    false
