remove double slash

--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ safe:        false
 host:        0.0.0.0
 port:        4000
 baseurl:     /
-url:         http://arcanis.name/
+url:         http://arcanis.name
 lsi:         false
 
 maruku:
