--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ destination: ./_site
 plugins:     ./_plugins
 layouts:     ./_layouts
 include:     ['.htaccess']
-exclude:     ['.gitignore','Gemfile','Gemfile.lock','README.md','TODO']
+exclude:     ['.gitignore','Gemfile','Gemfile.lock','README.md','TODO','README.md']
 keep_files:  ['.git','.svn']
 gems:        []
 
