--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,12 @@
 source:      .
-destination: _site
-plugins:     _plugins
-layouts:     _layouts
+destination: ./_site
+plugins:     ./_plugins
+layouts:     ./_layouts
 include:     ['.htaccess']
 exclude:     ['.gitignore','Gemfile','Gemfile.lock','README.md']
 keep_files:  ['.git','.svn']
-gems:        []
+gems:        ['jekyll-paginate']
+whitelist:   ['jekyll-pagination']
 
 future:      true
 limit_posts: 0
@@ -28,7 +29,7 @@ port:        4000
 baseurl:     /
 url:         https://arcanis.name
 enforce_ssl: arcanis.name
-lsi:         false
+lsi:         true
 
 maruku:
   use_tex:    false
