move html papers to md

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ markdown:      redcarpet
 markdown_ext:  markdown,mkd,mkdn,md
 textile_ext:   textile
 
-excerpt_separator: "\n\n"
+excerpt_separator: "<!--more-->"
 
 safe:        false
 host:        0.0.0.0
