some site fixes

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 source:      .
 destination: ./_site
-plugins:     ./_plugins
-layouts:     ./_layouts
+plugins_dir: ./_plugins
+layouts_dir: ./_layouts
 include:     ['.htaccess']
 exclude:     ['.gitignore','Gemfile','Gemfile.lock','README.md']
 keep_files:  ['.git','.svn']
@@ -11,9 +11,6 @@ whitelist:   ['jekyll-pagination']
 future:      true
 limit_posts: 0
 highlighter: pygments
-
-# dropped in 3.0
-#relative_permalinks: true
 
 permalink:     pretty
 paginate_path: 'blog/:num'
@@ -52,7 +49,7 @@ kramdown:
   entity_output: as_char
   toc_levels: 1..6
   smart_quotes: lsquo,rsquo,ldquo,rdquo
-  use_coderay: false
+  enable_coderay: false
 
   coderay:
     coderay_wrap: div
