--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ highlighter: rouge
 permalink:     pretty
 paginate_path: 'blog/:num'
 
-markdown:      redcarpet
+markdown:      kramdown
 markdown_ext:  markdown,mkd,mkdn,md
 textile_ext:   textile
 
